fixes for bad urls from some IDEs